--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
   <nav>
     <a href="#home" class="nav-link">Home</a>
     <a href="peoplesprimary" class="nav-link">The People's Primary Policy</a>
-    <a href="#resolution" class="nav-link">Our Resolution</a>
+    <a href="#resolution" class="nav-link">The Resolution</a>
     <a href="#why" class="nav-link">Why This Matters</a>
     <a href="#endorsements" class="nav-link">Endorsements</a>
     <a href="#about-us" class="nav-link">About Us</a>
@@ -222,10 +222,10 @@
         On <strong>June 7th, 2025</strong>, State Committee Members (SCMs) of the Arizona Democratic Party (ADP) voted overwhelmingly to establish a "People’s Primary" — a bold move to stop billionaires and corporations from buying our primary elections. In the three months since, an ad-hoc committee has drafted the official People's Primary policy to "ensure, to the greatest extent possible, that candidates in Democratic primaries are not benefited by, dependent on, or elected due to outside or independent electioneering spending funded by big donors who are circumventing legal limits on direct contributions to a candidate’s campaign fund to spend tens or hundreds of thousands and even millions of dollars of private wealth to elect the candidates of their choice."
       </p>
       <p>
-        <strong>We need your help.</strong> On September 13th, 2025, SCMs will vote on whether or not to offially add the <a href="#peoplesprimary">People's Primary policy</a> into the party bylaws. Please show your support for our final policy by endorsing it using <a>this link.</a>
+        <strong>We need your help.</strong> On September 13th, 2025, SCMs will vote on whether or not to officially add the <a href="#peoplesprimary">People's Primary policy</a> into the party bylaws. Please show your support for our final policy by endorsing it using <a href="https://docs.google.com/forms/d/e/1FAIpQLSe61f0KtM_TofiuI0g4ZCCAJ-XMmzHk2bn_WYfgMJ9K6cWCWg/viewform?usp=dialog">this link.</a>
       </p>
       <p>
-        Other state parties like North Carolina, and even the DNC itself, have joined the Arizona Democratic Party in committing to establishing a People's Primary. Want your state to be next? <a href="mailto:azdemprogressivecouncil@gmail.com">Contact us</a> to learn how to propose this resolution in your state.
+        Other state parties like North Carolina, and even the DNC itself, have joined the Arizona Democratic Party in committing to establishing a People's Primary. Want your state to be next? <a href="mailto:azdemprogressivecouncil@gmail.com">Contact us</a> and we will connect you with our network of organizers and resources to help you along the way.
       </p>
       <p>
         To keep up with our efforts, follow us on <a href="https://www.instagram.com/stopbigmoneyaz?utm_source=ig_web_button_share_sheet&igsh=cDI1a2R2aHd3bXBk">Instagram</a>, <a href="https://www.tiktok.com/@stopbigmoneyaz?is_from_webapp=1&sender_device=pc">TikTok</a>, <a href="https://www.facebook.com/profile.php?id=61576800702534#">Facebook</a>, and <a href="https://x.com/stopbigmoneyaz">Twitter/X</a> to stay up to date with our efforts.
@@ -437,7 +437,7 @@
   </section>
     
   <section id="resolution">
-    <h2>Our Resolution</h2>
+    <h2>The Resolution</h2>
     <p><strong>Resolution passed by the Arizona State Democratic Party on June 7th, 2025</strong></p>
     <p><strong>Title:</strong> Resolution to Establish a “People’s Primary” Policy Banning Billionaires and Corporations from Buying or Unduly Influencing Democratic Primaries</p>
 
@@ -494,13 +494,15 @@
     <h2 class="text-3xl font-bold text-gray-800 mb-8 text-center">Endorsements</h2>
     <a href="#national-endorsements" class="nav-link"><i>See National Leaders</i></a>
     <br>
-    <p>Want to add your name as an endorser? Go to <a href="https://docs.google.com/forms/d/e/1FAIpQLSc0cGUVtUrib9rtX-fADTSAqFnEOkWy4wkZ9E-WUEYEvRhiDg/viewform">this form</a> to sign in support.</p>
+    <p>Want to add your name as an endorser? Go to <a href="https://docs.google.com/forms/d/e/1FAIpQLSe61f0KtM_TofiuI0g4ZCCAJ-XMmzHk2bn_WYfgMJ9K6cWCWg/viewform?usp=dialog">this form</a> to sign in support.</p>
     <p>Helpful vocabulary: ADP = Arizona Democratic Party,  LD = Legislative District, SCM = (ADP) State Committee Member, PC = Precinct Committeeperson</p>
     <!-- Arizona Leaders -->
     <h3 class="text-2xl font-semibold text-gray-700 mb-4">Arizona Leaders</h3>
     <ul id="arizona-endorsements" class="space-y-2">
       <li><strong>Kai Newkirk</strong>, Co-Chair, ADP Progressive Council; founding Mission Director, Democracy Spring</li>
-      <li><strong>Missa Foy</strong>, Co-Chair, ADP Progressive Council; Chair, Navajo County Democratic Party</li>
+      <li><strong>Emily Kirkland</strong>, PC, LD 8, Former Executive Director, Progress Arizona</li>
+      <li><strong>Ben Armentrout</strong>, Youth Representative, ADP Progressive Council; PC, LD 20</li>
+      <!-- <li><strong>Missa Foy</strong>, Co-Chair, ADP Progressive Council; Chair, Navajo County Democratic Party</li>
       <li><strong>Eric Robbins</strong>, Chair, Pima County Democratic Party</li>
       <li><strong>Nick Collins</strong>, Secretary, ADP Progressive Council</li>
       <li><strong>Dan O’Neal</strong>, State Coordinator, Progressive Democrats of Arizona; Chair Emeritus, ADP Progressive Council</li>
@@ -624,10 +626,12 @@
       <li><strong>Henley Knex Gilles</strong>, Democratic Voter, Tucson</li>
       <li><strong>Arizona College Democrats</strong></li>
       <li><strong>University of Arizona College Democrats</strong></li>
+      -->
     </ul>
     <!-- National Leaders -->
     <h3 class="text-2xl font-semibold text-gray-700 mt-10 mb-4">National Leaders</h3>
     <ul id="national-endorsements" class="space-y-2">
+      <!--
       <li><strong>Sen. Bernie Sanders</strong>, US Senator, Vermont <a href="https://x.com/BernieSanders/status/1930703444425248943"><i>(Statement of support)</i></a></li>
       <li><strong>Lawrence Lessig</strong>, Chair, Equal Citizens</li>
       <li><strong>Rep. Ro Khanna</strong>, US Congressman, CA-17 <a href="https://x.com/RoKhanna/status/1930759856442757214"><i>(Statement of support)</i></a></li>
@@ -638,6 +642,7 @@
       <li><strong>Alan Minsky</strong>, Executive Director, Progressive Democrats of America</li>
       <li><strong>Progressive Democrats of America</strong></li>
       <li><strong>Our Revolution</strong></li>
+      -->
     </ul>
   </div>
 </section>
@@ -653,8 +658,8 @@
 
 </main>
 
-<a class="floating-button" href="https://docs.google.com/forms/d/e/1FAIpQLSc0cGUVtUrib9rtX-fADTSAqFnEOkWy4wkZ9E-WUEYEvRhiDg/viewform?usp=header" target="_blank">
-        Endorse our resolution. Become a PC. &#128279;
+<a class="floating-button" href="https://docs.google.com/forms/d/e/1FAIpQLSe61f0KtM_TofiuI0g4ZCCAJ-XMmzHk2bn_WYfgMJ9K6cWCWg/viewform?usp=dialog" target="_blank">
+        Endorse the People's Primary policy &#128279;
 </a>
 
 <script>
