--- a/index.html
+++ b/index.html
@@ -208,9 +208,9 @@
 <header class="nav-header">
   <nav>
     <a href="#home" class="nav-link">Home</a>
-    <a href="#why" class="nav-link">Why This Matters</a>
     <a href="#peoplesprimary" class="nav-link">The People's Primary Policy</a>
     <a href="#ppendorsements" class="nav-link">People's Primary Endorsements</a>
+    <a href="#why" class="nav-link">Why This Matters</a>
     <a href="#resolution" class="nav-link">The Resolution</a>
     <!--<a href="#resolutionendorsements" class="nav-link">Resolution Endorsements</a>-->
     <a href="#about-us" class="nav-link">About Us</a>
@@ -436,6 +436,7 @@
   </p>
     
   </section>
+  
   <section id="#ppendorsements" class="py-16 bg-gray-100">
   <div class="max-w-4xl mx-auto px-4">
     <h2 class="text-3xl font-bold text-gray-800 mb-8 text-center">Endorsements of The People's Primary Policy</h2>
@@ -446,7 +447,7 @@
     <p>Helpful vocabulary: ADP = Arizona Democratic Party,  LD = Legislative District, SCM = (ADP) State Committee Member, PC = Precinct Committeeperson</p>
     <!-- Arizona Leaders -->
     <h3 class="text-2xl font-semibold text-gray-700 mb-4">Arizona Leaders</h3>
-    <ul id="arizona-endorsements" class="space-y-2">
+    <ul id="pp-arizona-endorsements" class="space-y-2">
       <li><strong>Kai Newkirk</strong>, Co-Chair, ADP Progressive Council; founding Mission Director, Democracy Spring</li>
       <li><strong>Emily Kirkland</strong>, PC, LD 8, Former Executive Director, Progress Arizona</li>
       <li><strong>Ben Armentrout</strong>, Youth Representative, ADP Progressive Council; PC, LD 20</li>
@@ -591,20 +592,8 @@
       -->
     </ul>
   </div>
-</section>
-  <section id="resolution">
-    <h2>The Resolution</h2>
-    <p><strong>Resolution passed by the Arizona State Democratic Party on June 7th, 2025</strong></p>
-    <p><strong>Title:</strong> Resolution to Establish a “People’s Primary” Policy Banning Billionaires and Corporations from Buying or Unduly Influencing Democratic Primaries</p>
-
-    <p>WHEREAS, the Democratic Party is the party of the working class and Americans who believe in a one person, one vote democracy where our elections are determined by We the People as equal citizens –– not billionaires and big corporations; and</p>
-    <p>WHEREAS, working class voters should have no doubt that the candidates chosen in our primaries are not beholden to the same billionaires and corporations that are exploiting and hurting them; and</p>
-    <p>WHEREAS, the Arizona Democratic Party (ADP), as a voluntary association, has the authority and responsibility to regulate its internal affairs, including nominating processes and primary elections, to ensure fairness, integrity, and alignment with our values; and</p>
-    <p>WHEREAS, to strengthen our party’s brand, win back trust from many voters, and empower our party to win elections and govern to deliver for the working class, the Arizona Democratic Party must act to confront the crisis of big money corrupting our democracy within the arena under our direct authority: our primary elections;</p>
-    <p><strong>NOW, THEREFORE, BE IT RESOLVED</strong> that the Arizona Democratic Party will establish a "People's Primary" policy to bar, to the greatest extent possible, the use of massive private wealth to buy or unduly influence our primary elections. This policy will ensure, to the greatest extent possible, that candidates in Democratic primaries are not benefited by, dependent on, or elected due to outside or independent electioneering spending funded by big donors who are circumventing legal limits on direct contributions to a candidate’s campaign fund to spend tens or hundreds of thousands and even millions of dollars of private wealth to elect the candidates of their choice.</p>
-    <p><strong>BE IT FURTHER RESOLVED</strong> that the Chair of the ADP Rules Committee shall form an ad-hoc committee to develop this policy that includes the organizers of this resolution and one mutually-agreed member of the ADP Executive Committee. The committee will be charged with developing this policy to achieve the purpose established here-in and with formulating official proposed ADP People's Primary policy and procedures, including any bylaws changes, if necessary, to implement and enforce it. This policy and associated procedures, and any additional supporting resolution or bylaws changes, will be prepared and submitted for a vote at the September 2025 State Committee Meeting.</p>
   </section>
-
+  
   <section id="why">
       <h2>Why This Matters</h2>
       <div class="collapsible-section">
@@ -644,6 +633,18 @@
       </div>
   </section>
 
+  <section id="resolution">
+    <h2>The Resolution</h2>
+    <p><strong>Resolution passed by the Arizona State Democratic Party on June 7th, 2025</strong></p>
+    <p><strong>Title:</strong> Resolution to Establish a “People’s Primary” Policy Banning Billionaires and Corporations from Buying or Unduly Influencing Democratic Primaries</p>
+
+    <p>WHEREAS, the Democratic Party is the party of the working class and Americans who believe in a one person, one vote democracy where our elections are determined by We the People as equal citizens –– not billionaires and big corporations; and</p>
+    <p>WHEREAS, working class voters should have no doubt that the candidates chosen in our primaries are not beholden to the same billionaires and corporations that are exploiting and hurting them; and</p>
+    <p>WHEREAS, the Arizona Democratic Party (ADP), as a voluntary association, has the authority and responsibility to regulate its internal affairs, including nominating processes and primary elections, to ensure fairness, integrity, and alignment with our values; and</p>
+    <p>WHEREAS, to strengthen our party’s brand, win back trust from many voters, and empower our party to win elections and govern to deliver for the working class, the Arizona Democratic Party must act to confront the crisis of big money corrupting our democracy within the arena under our direct authority: our primary elections;</p>
+    <p><strong>NOW, THEREFORE, BE IT RESOLVED</strong> that the Arizona Democratic Party will establish a "People's Primary" policy to bar, to the greatest extent possible, the use of massive private wealth to buy or unduly influence our primary elections. This policy will ensure, to the greatest extent possible, that candidates in Democratic primaries are not benefited by, dependent on, or elected due to outside or independent electioneering spending funded by big donors who are circumventing legal limits on direct contributions to a candidate’s campaign fund to spend tens or hundreds of thousands and even millions of dollars of private wealth to elect the candidates of their choice.</p>
+    <p><strong>BE IT FURTHER RESOLVED</strong> that the Chair of the ADP Rules Committee shall form an ad-hoc committee to develop this policy that includes the organizers of this resolution and one mutually-agreed member of the ADP Executive Committee. The committee will be charged with developing this policy to achieve the purpose established here-in and with formulating official proposed ADP People's Primary policy and procedures, including any bylaws changes, if necessary, to implement and enforce it. This policy and associated procedures, and any additional supporting resolution or bylaws changes, will be prepared and submitted for a vote at the September 2025 State Committee Meeting.</p>
+  </section>
 
   <section id="resolutionendorsements" class="py-16 bg-gray-100">
   <div class="max-w-4xl mx-auto px-4">
