--- a/index.html
+++ b/index.html
@@ -451,9 +451,28 @@
       <li><strong>Kai Newkirk</strong>, Co-Chair, ADP Progressive Council; founding Mission Director, Democracy Spring</li>
       <li><strong>Emily Kirkland</strong>, PC, LD 8, Former Executive Director, Progress Arizona</li>
       <li><strong>Ben Armentrout</strong>, Youth Representative, ADP Progressive Council; PC, LD 20</li>
+      <li><strong>Shawnté Rothschild</strong>, Vice Chair, Arizona Democratic Party</li>
+      <li><strong>Nicolas Mink</strong>, Vice Chair, Arizona Democratic Party</li>
+      <li><strong>Leezah Sun</strong>, Chair, LD 22 Democratic Party</li>
       <li><strong>Nick Collins</strong>, Secretary, ADP Progressive Council</li>
       <li><strong>Angela Buer</strong>, Former Chair, LD 9 Democratic Party</li>
-      <li><strong>Dhruv Rebba</strong>, Co-Chair, ADP AAPI Caucus, Vice President, ASU Young Dems</li>
+      <li><strong>Dhruv Rebba</strong>, Co-Chair, ADP AAPI Caucus; Vice President, ASU Young Dems</li>
+      <li><strong>Markus Ceniceros</strong>, Vice President, Littleton Elementary School District; 3rd Vice Chair, Maricopa County Democratic Party</li>
+      <li><strong>Ken Kenegos</strong>, SCM, LD 18</li>
+      <li><strong>Gary Michiel Montiel</strong>, Precint Committee Chair, Superior, AZ; PC, LD 7</li>
+      <li><strong>Marilyn Weissman</strong>, SCM, LD 6</li>
+      <li><strong>Eve Shapiro</strong>, SCM, LD 18</li>
+      <li><strong>Deydrek Scott</strong>, SCM, LD 6</li>
+      <li><strong>Debra Block</strong>, SCM, LD 6</li>
+      <li><strong>Michael Bradley</strong>, SCM, LD 4</li>
+      <li><strong>Don Womack</strong>, SCM, LD 18</li>
+      <li><strong>Dr Amtul R Ahmad</strong>, SCM, LD 23</li>
+      <li><strong>Yazdaan Ayham Taajwar</strong>, SCM, LD12;</li>
+      <li><strong>Jessica Staggers</strong>, PC, LD 29 </li>
+      <li><strong>Melissa Galarza</strong>, SCM, LD 12</li>
+      <li><strong>Ted Solis</strong>, Democratic Voter, Tempe</li>
+      <li><strong>James A Kimes</strong>, Proud Liberal</li>
+      <li><strong>Edwin Fix</strong>, Citizen</li>
       <!--
       <li><strong>Missa Foy</strong>, Co-Chair, ADP Progressive Council; Chair, Navajo County Democratic Party</li>
       <li><strong>Eric Robbins</strong>, Chair, Pima County Democratic Party</li>
@@ -468,8 +487,6 @@
       <li><strong>Rep. Brian Garcia</strong>, State Representative, LD 8</li>
       <li><strong>Raquel Terán</strong>, Former Chair, Arizona Democratic Party; Former Senate Democratic Leader</li>
       <li><strong>Markus Ceniceros</strong>, Board Member, Littleton Elementary School District; SCM, LD 22; 3rd Vice Chair, Maricopa County Democratic Party</li>
-      <li><strong>Melissa Galarza</strong>, SCM, LD 12</li>
-      <li><strong>Nicolas Mink</strong>, Vice Chair, Arizona Democratic Party</li>
       <li><strong>Shawnte Rothschild</strong>, Vice Chair, Arizona Democratic Party</li>
       <li><strong>Sarah Stuart</strong>, President, Arizona College Democrats; Coconino County Democratic Party, Youth Committee Chair; PC, LD 7</li>
       <li><strong>Laura Carter</strong>, Chair, Coconino County Democratic Party</li>
