--- a/index.html
+++ b/index.html
@@ -458,6 +458,7 @@
       <li><strong>Angela Buer</strong>, Former Chair, LD 9 Democratic Party</li>
       <li><strong>Dhruv Rebba</strong>, Co-Chair, ADP AAPI Caucus; Vice President, ASU Young Dems</li>
       <li><strong>Markus Ceniceros</strong>, Vice President, Littleton Elementary School District; 3rd Vice Chair, Maricopa County Democratic Party</li>
+      <li><strong>Rahel Hehn</strong>, President, University of Arizona College Democrats; PC, LD 17</li>
       <li><strong>Ken Kenegos</strong>, SCM, LD 18</li>
       <li><strong>Gary Michiel Montiel</strong>, Precint Committee Chair, Superior, AZ; PC, LD 7</li>
       <li><strong>Marilyn Weissman</strong>, SCM, LD 6</li>
@@ -473,6 +474,7 @@
       <li><strong>Ted Solis</strong>, Democratic Voter, Tempe</li>
       <li><strong>James A Kimes</strong>, Proud Liberal</li>
       <li><strong>Edwin Fix</strong>, Citizen</li>
+      <li><strong>Eric Paschal</strong>, Democratic Voter, Phoenix</li>
       <!--
       <li><strong>Missa Foy</strong>, Co-Chair, ADP Progressive Council; Chair, Navajo County Democratic Party</li>
       <li><strong>Eric Robbins</strong>, Chair, Pima County Democratic Party</li>
