--- a/index.html
+++ b/index.html
@@ -453,6 +453,7 @@
       <li><strong>Ben Armentrout</strong>, Youth Representative, ADP Progressive Council; PC, LD 20</li>
       <li><strong>Shawnté Rothschild</strong>, Vice Chair, Arizona Democratic Party</li>
       <li><strong>Nicolas Mink</strong>, Vice Chair, Arizona Democratic Party</li>
+      <li><strong>Paul Stapleton-Smith</strong>, 2nd Vice Chair & SCM, LD 21</li>
       <li><strong>Leezah Sun</strong>, Chair, LD 22 Democratic Party</li>
       <li><strong>Nick Collins</strong>, Secretary, ADP Progressive Council</li>
       <li><strong>Angela Buer</strong>, Former Chair, LD 9 Democratic Party</li>
@@ -480,7 +481,6 @@
       <li><strong>Eric Robbins</strong>, Chair, Pima County Democratic Party</li>
       <li><strong>Dan O’Neal</strong>, State Coordinator, Progressive Democrats of Arizona; Chair Emeritus, ADP Progressive Council</li>
       <li><strong>Jennifer Hilsbos</strong>, Chair, Pinal County Democratic Party</li>
-      <li><strong>Paul Stapleton-Smith</strong>, SCM, LD 21</li>
       <li><strong>Sen. Priya Sundareshan</strong>, Senate Democratic Leader, LD 18</li>
       <li><strong>Sen. Catherine Miranda</strong>, Senate Democratic Assistant Leader, LD 11</li>
       <li><strong>Sen. Analise Ortiz</strong>, State Senator, LD 24</li>
