--- a/index.html
+++ b/index.html
@@ -451,10 +451,13 @@
       <li><strong>Kai Newkirk</strong>, Co-Chair, ADP Progressive Council; founding Mission Director, Democracy Spring</li>
       <li><strong>Emily Kirkland</strong>, PC, LD 8, Former Executive Director, Progress Arizona</li>
       <li><strong>Ben Armentrout</strong>, Youth Representative, ADP Progressive Council; PC, LD 20</li>
+      <li><strong>Eric Robbins</strong>, Chair, Pima County Democratic Party</li>
       <li><strong>Shawnté Rothschild</strong>, Vice Chair, Arizona Democratic Party</li>
       <li><strong>Nicolas Mink</strong>, Vice Chair, Arizona Democratic Party</li>
       <li><strong>Paul Stapleton-Smith</strong>, 2nd Vice Chair & SCM, LD 21</li>
+      <li><strong>Eva Putzova</strong>, Former Flagstaff City Councilmember; SCM, LD 6</li>
       <li><strong>Leezah Sun</strong>, Chair, LD 22 Democratic Party</li>
+      <li><strong>Dan O’Neal</strong>, State Coordinator, Progressive Democrats of Arizona; Chair Emeritus, ADP Progressive Council</li>
       <li><strong>Nick Collins</strong>, Secretary, ADP Progressive Council</li>
       <li><strong>Angela Buer</strong>, Former Chair, LD 9 Democratic Party</li>
       <li><strong>Dhruv Rebba</strong>, Co-Chair, ADP AAPI Caucus; Vice President, ASU Young Dems</li>
@@ -472,14 +475,16 @@
       <li><strong>Yazdaan Ayham Taajwar</strong>, SCM, LD12;</li>
       <li><strong>Jessica Staggers</strong>, PC, LD 29 </li>
       <li><strong>Melissa Galarza</strong>, SCM, LD 12</li>
+      <li><strong>Sharon Regen</strong>, SCM, LD 1</li>
+      <li><strong>Nasir Raza</strong>, Progressive Voter, Progressive Democrats of America, Arizona Progressives</li>
+      <li><strong>Maher Arekat</strong>, Founder and Director, Palestine Community Center of Arizona</li>
       <li><strong>Ted Solis</strong>, Democratic Voter, Tempe</li>
       <li><strong>James A Kimes</strong>, Proud Liberal</li>
       <li><strong>Edwin Fix</strong>, Citizen</li>
       <li><strong>Eric Paschal</strong>, Democratic Voter, Phoenix</li>
+      <li><strong>Stephen Mufarreh</strong></li>
       <!--
       <li><strong>Missa Foy</strong>, Co-Chair, ADP Progressive Council; Chair, Navajo County Democratic Party</li>
-      <li><strong>Eric Robbins</strong>, Chair, Pima County Democratic Party</li>
-      <li><strong>Dan O’Neal</strong>, State Coordinator, Progressive Democrats of Arizona; Chair Emeritus, ADP Progressive Council</li>
       <li><strong>Jennifer Hilsbos</strong>, Chair, Pinal County Democratic Party</li>
       <li><strong>Sen. Priya Sundareshan</strong>, Senate Democratic Leader, LD 18</li>
       <li><strong>Sen. Catherine Miranda</strong>, Senate Democratic Assistant Leader, LD 11</li>
@@ -495,7 +500,6 @@
       <li><strong>Martín J. Quezada</strong>, Former State Senator, LD 29</li>
       <li><strong>Richard Andrade</strong>, Former State Representative, LD 29</li>
       <li><strong>Celia Barotz</strong>, Former Vice Mayor of Flagstaff; SCM, LD 6</li>
-      <li><strong>Eva Putzova</strong>, Former Flagstaff City Councilmember; SCM, LD 6</li>
       <li><strong>Jackson Reed</strong>, ADP Executive Committee Member; SCM, LD 8</li>
       <li><strong>Connie Cockrell</strong>, Chair, Gila County Democrats</li>
       <li><strong>Alison Porter</strong>, Co-Chair, ADP Small Business Council; Co-Founder, Save Our Schools</li>
@@ -516,7 +520,6 @@
       <li><strong>Betts Putnam-Hidalgo</strong>, SCM, LD 20; Former Co-Chair, ADP Progressive Council</li>
       <li><strong>Athena Shao</strong>, Director of Political Affairs, AZ College Democrats</li>
       <li><strong>Suzi Walling</strong>, SCM & Former Chair, LD 29; Former President, Grand Democrats</li>
-      <li><strong>Michael Bradley</strong>, SCM, LD 4</li>
       <li><strong>Marilyn Weissman</strong>, PC, LD 6</li>
       <li><strong>Donna Hanley</strong>, SCM, LD 7</li>
       <li><strong>Charlie Silver</strong>, SCM, LD 6</li>
