--- a/index.html
+++ b/index.html
@@ -445,26 +445,35 @@
     <p>Want to add your name as an endorser? Go to <a href="https://docs.google.com/forms/d/e/1FAIpQLSe61f0KtM_TofiuI0g4ZCCAJ-XMmzHk2bn_WYfgMJ9K6cWCWg/viewform?usp=dialog">this form</a> to sign in support.</p>
     <p>Endorsers of the Resolution passed on June 7th, 2025, can be found <a href="#resolutionendorsements">here.</a></p>
     <p>Helpful vocabulary: ADP = Arizona Democratic Party,  LD = Legislative District, SCM = (ADP) State Committee Member, PC = Precinct Committeeperson</p>
+    <p>Asterisks designate members of the ADP People's Primary Ad Hoc Committee responsible for preparing the People's Primary policy.</p>
     <!-- Arizona Leaders -->
     <h3 class="text-2xl font-semibold text-gray-700 mb-4">Arizona Leaders</h3>
     <ul id="pp-arizona-endorsements" class="space-y-2">
-      <li><strong>Kai Newkirk</strong>, Co-Chair, ADP Progressive Council; founding Mission Director, Democracy Spring</li>
-      <li><strong>Emily Kirkland</strong>, PC, LD 8, Former Executive Director, Progress Arizona</li>
-      <li><strong>Ben Armentrout</strong>, Youth Representative, ADP Progressive Council; PC, LD 20</li>
-      <li><strong>Eric Robbins</strong>, Chair, Pima County Democratic Party</li>
+      <li><strong>Kai Newkirk*</strong>, Co-Chair, ADP Progressive Council; Founding Mission Director, Democracy Spring</li>
+      <li><strong>Emily Kirkland*</strong>, PC, LD 8; Former Executive Director, Progress Arizona</li>
+      <li><strong>Eric Robbins*</strong>, Chair, Pima County Democratic Party</li>
+      <li><strong>Ben Armentrout*</strong>, Youth Representative, ADP Progressive Council; PC, LD 20</li>
       <li><strong>Shawnté Rothschild</strong>, Vice Chair, Arizona Democratic Party</li>
       <li><strong>Nicolas Mink</strong>, Vice Chair, Arizona Democratic Party</li>
       <li><strong>Paul Stapleton-Smith</strong>, 2nd Vice Chair & SCM, LD 21</li>
       <li><strong>Eva Putzova</strong>, Former Flagstaff City Councilmember; SCM, LD 6</li>
       <li><strong>Leezah Sun</strong>, Chair, LD 22 Democratic Party</li>
       <li><strong>Dan O’Neal</strong>, State Coordinator, Progressive Democrats of Arizona; Chair Emeritus, ADP Progressive Council</li>
-      <li><strong>Nick Collins</strong>, Secretary, ADP Progressive Council</li>
+      <li><strong>Brianna Westbrook</strong>, Former Vice Chair, Arizona Democratic Party; Former National Bernie Sanders Surrogate</li>
+      <li><strong>Timothy Kosse</strong>, First Vice Chair, Pima County Democratic Party; SCM, LD 17</li>
+      <li><strong>Nick Collins</strong>, Secretary, ADP Progressive Council; SCM, LD 12</li>
       <li><strong>Angela Buer</strong>, Former Chair, LD 9 Democratic Party</li>
       <li><strong>Dhruv Rebba</strong>, Co-Chair, ADP AAPI Caucus; Vice President, ASU Young Dems</li>
       <li><strong>Markus Ceniceros</strong>, Vice President, Littleton Elementary School District; 3rd Vice Chair, Maricopa County Democratic Party</li>
       <li><strong>Rahel Hehn</strong>, President, University of Arizona College Democrats; PC, LD 17</li>
+      <li><strong>Rasean Clayton</strong>, Equity Moderator, ADP</li>
+      <li><strong>Bobby Bauders</strong>, Former School Board Member</li>
+      <li><strong>Julia Walsh</strong>, Secretary, ADP Jewish Caucus; SCM, LD 12</li>
+      <li><strong>Donna Durand</strong>, Former Chair & SCM, LD 25</li>
+      <li><strong>Rivko Knox</strong>, SCM, LD 2</li>
       <li><strong>Ken Kenegos</strong>, SCM, LD 18</li>
-      <li><strong>Gary Michiel Montiel</strong>, Precint Committee Chair, Superior, AZ; PC, LD 7</li>
+      <li><strong>Kathy Fitzmaurice Yontz</strong>, SCM, LD 12</li>
+      <li><strong>James Jursich</strong>, SCM, LD 12</li>
       <li><strong>Marilyn Weissman</strong>, SCM, LD 6</li>
       <li><strong>Eve Shapiro</strong>, SCM, LD 18</li>
       <li><strong>Deydrek Scott</strong>, SCM, LD 6</li>
@@ -476,12 +485,16 @@
       <li><strong>Jessica Staggers</strong>, PC, LD 29 </li>
       <li><strong>Melissa Galarza</strong>, SCM, LD 12</li>
       <li><strong>Sharon Regen</strong>, SCM, LD 1</li>
+      <li><strong>Gary Michiel Montiel</strong>, Precint Committee Chair, Superior, AZ; PC, LD 7</li>
       <li><strong>Nasir Raza</strong>, Progressive Voter, Progressive Democrats of America, Arizona Progressives</li>
       <li><strong>Maher Arekat</strong>, Founder and Director, Palestine Community Center of Arizona</li>
       <li><strong>Ted Solis</strong>, Democratic Voter, Tempe</li>
       <li><strong>James A Kimes</strong>, Proud Liberal</li>
       <li><strong>Edwin Fix</strong>, Citizen</li>
       <li><strong>Eric Paschal</strong>, Democratic Voter, Phoenix</li>
+      <li><strong>Adam David Burch</strong>, Voter, Phoenix</li>
+      <li><strong>Rebecca Lynn Crawford</strong>, Independent</li>
+      <li><strong>Kathryn Connor</strong>, Democratic Voter, LD 24</li>
       <li><strong>Stephen Mufarreh</strong></li>
       <!--
       <li><strong>Missa Foy</strong>, Co-Chair, ADP Progressive Council; Chair, Navajo County Democratic Party</li>
@@ -514,7 +527,6 @@
       <li><strong>Susie Thornton</strong>, Secretary & SCM, LD 12</li>
       <li><strong>Alex Ray Sanchez</strong>, Communications Chair, Pima County Democratic Party; Southern Arizona Vice Chair, ADP Progressive Council</li>
       <li><strong>Ann Heitland</strong>, Former Senior Vice-Chair, ADP; Former Chair, Coconino County Democratic Party</li>
-      <li><strong>Brianna Westbrook</strong>, Former Vice Chair, Arizona Democratic Party</li>
       <li><strong>Natacha Chavez</strong>, Vice Chair, ADP Progressive Council, SCM, LD 22</li>
       <li><strong>Thomas Dunning</strong>, 1st Vice President, Democrats of Rim Country</li>
       <li><strong>Betts Putnam-Hidalgo</strong>, SCM, LD 20; Former Co-Chair, ADP Progressive Council</li>
@@ -541,7 +553,6 @@
       <li><strong>Eric Stafford</strong>, Vice Chair, LD 29</li>
       <li><strong>Sharon Regen</strong>, SCM, LD 1</li>
       <li><strong>Sherri Johnson</strong>, SCM, LD 12</li>
-      <li><strong>James Jursich</strong>, PC, LD 12</li>
       <li><strong>Nancy Scharff</strong>, SCM, LD 1</li>
       <li><strong>Karen Dubin</strong>, SCM</li>
       <li><strong>Ruthee Goldkorn</strong>, SCM, LD 28</li>
@@ -559,10 +570,8 @@
       <li><strong>Sean Feeney</strong>, PC, LD 22</li>
       <li><strong>Timothy Kosse</strong>, First Vice Chair, Pima County Democratic Party; SCM</li>
       <li><strong>Debra Block</strong>, SCM, LD 6</li>
-      <li><strong>Donna Durand</strong>, Former Chair & State Committee Person, LD 25</li>
       <li><strong>Catherine Ralls</strong>, PC, LD 12</li>
       <li><strong>Katherine Ginzel</strong>, SCM, LD 1</li>
-      <li><strong>Rivko Knox</strong>, SCM, LD 2</li>
       <li><strong>Vivian Perry</strong>, Executive Committee Member & SCM, LD 1</li>
       <li><strong>Rebecca Villalpando</strong>, SCM, LD 1</li>
       <li><strong>Aaron Essif</strong>, SCM, LD 17</li>
