--- a/index.html
+++ b/index.html
@@ -470,6 +470,7 @@
       <li><strong>Bobby Bauders</strong>, Former School Board Member</li>
       <li><strong>Julia Walsh</strong>, Secretary, ADP Jewish Caucus; SCM, LD 12</li>
       <li><strong>Donna Durand</strong>, Former Chair & SCM, LD 25</li>
+      <li><strong>Channel Powe</strong>, SCM, LD 8; ADP Chair Candidate</li>
       <li><strong>Rivko Knox</strong>, SCM, LD 2</li>
       <li><strong>Ken Kenegos</strong>, SCM, LD 18</li>
       <li><strong>Kathy Fitzmaurice Yontz</strong>, SCM, LD 12</li>
