--- a/index.html
+++ b/index.html
@@ -471,6 +471,7 @@
       <li><strong>Julia Walsh</strong>, Secretary, ADP Jewish Caucus; SCM, LD 12</li>
       <li><strong>Donna Durand</strong>, Former Chair & SCM, LD 25</li>
       <li><strong>Channel Powe</strong>, SCM, LD 8; ADP Chair Candidate</li>
+      <li><strong>Shasta Guthrie</strong>, 2nd VC, Yavapai County Democratic Party; SCM, LD1</li>
       <li><strong>Rivko Knox</strong>, SCM, LD 2</li>
       <li><strong>Ken Kenegos</strong>, SCM, LD 18</li>
       <li><strong>Kathy Fitzmaurice Yontz</strong>, SCM, LD 12</li>
@@ -486,8 +487,12 @@
       <li><strong>Jessica Staggers</strong>, PC, LD 29 </li>
       <li><strong>Melissa Galarza</strong>, SCM, LD 12</li>
       <li><strong>Sharon Regen</strong>, SCM, LD 1</li>
+      <li><strong>Vivian Perry</strong>, SCM, LD 2</li>
+      <li><strong>Janet Kerby</strong>, SCM, LD 12</li>
+      <li><strong>Samantha Severson</strong>, Democratic Voter & Congressional Candidate, AZ 06</li>
+      <li><strong>Peyton Bradley</strong>, Secretary, Arizona College Democrats</li>
       <li><strong>Gary Michiel Montiel</strong>, Precint Committee Chair, Superior, AZ; PC, LD 7</li>
-      <li><strong>Nasir Raza</strong>, Progressive Voter, Progressive Democrats of America, Arizona Progressives</li>
+      <li><strong>Nasir Raza</strong>, Democratic Voter & Member, LD 4</li>
       <li><strong>Maher Arekat</strong>, Founder and Director, Palestine Community Center of Arizona</li>
       <li><strong>Ted Solis</strong>, Democratic Voter, Tempe</li>
       <li><strong>James A Kimes</strong>, Proud Liberal</li>
@@ -497,6 +502,10 @@
       <li><strong>Rebecca Lynn Crawford</strong>, Independent</li>
       <li><strong>Kathryn Connor</strong>, Democratic Voter, LD 24</li>
       <li><strong>Stephen Mufarreh</strong></li>
+      <li><strong>Alex Mixa</strong>, Concerned American</li>
+      <li><strong>Jackson Davis</strong>, Democratic Voter</li>
+      <li><strong>Jessica van Oostrom</strong>, Voter, Phoenix</li>
+      
       <!--
       <li><strong>Missa Foy</strong>, Co-Chair, ADP Progressive Council; Chair, Navajo County Democratic Party</li>
       <li><strong>Jennifer Hilsbos</strong>, Chair, Pinal County Democratic Party</li>
@@ -558,7 +567,6 @@
       <li><strong>Karen Dubin</strong>, SCM</li>
       <li><strong>Ruthee Goldkorn</strong>, SCM, LD 28</li>
       <li><strong>Marshall Militano</strong>, 2nd Vice Chair, LD 27</li>
-      <li><strong>Shasta Guthrie</strong>, 2nd VC, Yavapai County Democratic Party; SCM, LD1</li>
       <li><strong>George McGaughey</strong>, Chair & SCM, LD 19</li>
       <li><strong>Leigh Emrick</strong>, PC</li>
       <li><strong>Bernard Buddy Fleitz</strong>, SCM, LD 1</li>
@@ -573,7 +581,6 @@
       <li><strong>Debra Block</strong>, SCM, LD 6</li>
       <li><strong>Catherine Ralls</strong>, PC, LD 12</li>
       <li><strong>Katherine Ginzel</strong>, SCM, LD 1</li>
-      <li><strong>Vivian Perry</strong>, Executive Committee Member & SCM, LD 1</li>
       <li><strong>Rebecca Villalpando</strong>, SCM, LD 1</li>
       <li><strong>Aaron Essif</strong>, SCM, LD 17</li>
       <li><strong>Ricky Spann</strong>, SCM</li>
