--- a/index.html
+++ b/index.html
@@ -457,8 +457,8 @@
       <li><strong>Nicolas Mink</strong>, Vice Chair, Arizona Democratic Party</li>
       <li><strong>Paul Stapleton-Smith</strong>, 2nd Vice Chair & SCM, LD 21</li>
       <li><strong>Eva Putzova</strong>, Former Flagstaff City Councilmember; SCM, LD 6</li>
-      <li><strong>Leezah Sun</strong>, Chair, LD 22 Democratic Party</li>
-      <li><strong>Dan O’Neal</strong>, State Coordinator, Progressive Democrats of Arizona; Chair Emeritus, ADP Progressive Council</li>
+      <li><strong>Leezah Sun</strong>, Chair & SCM, LD 22 Democratic Party</li>
+      <li><strong>Dan O’Neal</strong>, SCM, LD 14; State Coordinator, Progressive Democrats of Arizona; Chair Emeritus, ADP Progressive Council</li>
       <li><strong>Brianna Westbrook</strong>, Former Vice Chair, Arizona Democratic Party; Former National Bernie Sanders Surrogate</li>
       <li><strong>Timothy Kosse</strong>, First Vice Chair, Pima County Democratic Party; SCM, LD 17</li>
       <li><strong>Nick Collins</strong>, Secretary, ADP Progressive Council; SCM, LD 12</li>
@@ -471,7 +471,8 @@
       <li><strong>Julia Walsh</strong>, Secretary, ADP Jewish Caucus; SCM, LD 12</li>
       <li><strong>Donna Durand</strong>, Former Chair & SCM, LD 25</li>
       <li><strong>Channel Powe</strong>, SCM, LD 8; ADP Chair Candidate</li>
-      <li><strong>Shasta Guthrie</strong>, 2nd VC, Yavapai County Democratic Party; SCM, LD1</li>
+      <li><strong>Shasta Guthrie</strong>, 2nd Vice Chair, Yavapai County Democratic Party; SCM, LD 1</li>
+      <li><strong>Chester Bokich</strong>, 1st Vice Chair & SCM, LD 11</li>
       <li><strong>Rivko Knox</strong>, SCM, LD 2</li>
       <li><strong>Ken Kenegos</strong>, SCM, LD 18</li>
       <li><strong>Kathy Fitzmaurice Yontz</strong>, SCM, LD 12</li>
@@ -483,16 +484,18 @@
       <li><strong>Michael Bradley</strong>, SCM, LD 4</li>
       <li><strong>Don Womack</strong>, SCM, LD 18</li>
       <li><strong>Dr Amtul R Ahmad</strong>, SCM, LD 23</li>
-      <li><strong>Yazdaan Ayham Taajwar</strong>, SCM, LD12;</li>
-      <li><strong>Jessica Staggers</strong>, PC, LD 29 </li>
+      <li><strong>Yazdaan Ayham Taajwar</strong>, SCM, LD 12;</li>
       <li><strong>Melissa Galarza</strong>, SCM, LD 12</li>
       <li><strong>Sharon Regen</strong>, SCM, LD 1</li>
       <li><strong>Vivian Perry</strong>, SCM, LD 2</li>
       <li><strong>Janet Kerby</strong>, SCM, LD 12</li>
+      <li><strong>Shara Carrillo</strong>, SCM, LD 14</li>
+      <li><strong>Angela Quiroz</strong>, PC, LD 14 </li>
+      <li><strong>Jessica Staggers</strong>, PC, LD 29 </li>
       <li><strong>Samantha Severson</strong>, Democratic Voter & Congressional Candidate, AZ 06</li>
       <li><strong>Peyton Bradley</strong>, Secretary, Arizona College Democrats</li>
       <li><strong>Gary Michiel Montiel</strong>, Precint Committee Chair, Superior, AZ; PC, LD 7</li>
-      <li><strong>Nasir Raza</strong>, Democratic Voter & Member, LD 4</li>
+      <li><strong>Syed Mahmud Nasir Raza</strong>, Democratic Voter & Member, LD 4</li>
       <li><strong>Maher Arekat</strong>, Founder and Director, Palestine Community Center of Arizona</li>
       <li><strong>Ted Solis</strong>, Democratic Voter, Tempe</li>
       <li><strong>James A Kimes</strong>, Proud Liberal</li>
@@ -505,6 +508,7 @@
       <li><strong>Alex Mixa</strong>, Concerned American</li>
       <li><strong>Jackson Davis</strong>, Democratic Voter</li>
       <li><strong>Jessica van Oostrom</strong>, Voter, Phoenix</li>
+
       
       <!--
       <li><strong>Missa Foy</strong>, Co-Chair, ADP Progressive Council; Chair, Navajo County Democratic Party</li>
