--- a/index.html
+++ b/index.html
@@ -508,6 +508,7 @@
       <li><strong>Alex Mixa</strong>, Concerned American</li>
       <li><strong>Jackson Davis</strong>, Democratic Voter</li>
       <li><strong>Jessica van Oostrom</strong>, Voter, Phoenix</li>
+      <li><strong>Diane Escalante</strong>, Democratic Voter, Tempe</li>
 
       
       <!--
