--- a/index.html
+++ b/index.html
@@ -509,6 +509,7 @@
       <li><strong>Jackson Davis</strong>, Democratic Voter</li>
       <li><strong>Jessica van Oostrom</strong>, Voter, Phoenix</li>
       <li><strong>Diane Escalante</strong>, Democratic Voter, Tempe</li>
+      <li><strong>Jason Todd</strong>, Progressive Voter, Arizona</li>
 
       
       <!--
