--- a/index.html
+++ b/index.html
@@ -458,6 +458,7 @@
       <li><strong>Paul Stapleton-Smith</strong>, 2nd Vice Chair & SCM, LD 21</li>
       <li><strong>Eva Putzova</strong>, Former Flagstaff City Councilmember; SCM, LD 6</li>
       <li><strong>Leezah Sun</strong>, Chair & SCM, LD 22 Democratic Party</li>
+      <li><strong>Pedro Caudillo Paredes</strong>, Chair & SCM, LD 24 Democratic Party</li>
       <li><strong>Dan O’Neal</strong>, SCM, LD 14; State Coordinator, Progressive Democrats of Arizona; Chair Emeritus, ADP Progressive Council</li>
       <li><strong>Brianna Westbrook</strong>, Former Vice Chair, Arizona Democratic Party; Former National Bernie Sanders Surrogate</li>
       <li><strong>Timothy Kosse</strong>, First Vice Chair, Pima County Democratic Party; SCM, LD 17</li>
@@ -490,6 +491,11 @@
       <li><strong>Vivian Perry</strong>, SCM, LD 2</li>
       <li><strong>Janet Kerby</strong>, SCM, LD 12</li>
       <li><strong>Shara Carrillo</strong>, SCM, LD 14</li>
+      <li><strong>Dawn Schackner</strong>, SCM, LD 6</li>
+      <li><strong>Geoffry Fitzwater-Castle</strong>, SCM, LD 7; 2nd Vice-Chair, Apache Junction Democrats; Voter Registration Chair, Pinal County Democratic Party</li>
+      <li><strong>Donna Durand</strong>, Former Chair & SCM, LD 25</li>
+      <li><strong>Mary S. Addy</strong>, SCM, LD 23</li>
+      <li><strong>Ruthee Goldkorn</strong>, SCM, LD 28</li>
       <li><strong>Angela Quiroz</strong>, PC, LD 14 </li>
       <li><strong>Jessica Staggers</strong>, PC, LD 29 </li>
       <li><strong>Samantha Severson</strong>, Democratic Voter & Congressional Candidate, AZ 06</li>
@@ -510,6 +516,9 @@
       <li><strong>Jessica van Oostrom</strong>, Voter, Phoenix</li>
       <li><strong>Diane Escalante</strong>, Democratic Voter, Tempe</li>
       <li><strong>Jason Todd</strong>, Progressive Voter, Arizona</li>
+      <li><strong>Judith H. Coburn</strong>, Democratic Voter, Mesa</li>
+      <li><strong>Joshua Howard</strong>, Arizona Voter</li>
+      <li><strong>Leeann McIntosh</strong>, Democratic Voter</li>
 
       
       <!--
