--- a/index.html
+++ b/index.html
@@ -453,6 +453,7 @@
       <li><strong>Emily Kirkland*</strong>, PC, LD 8; Former Executive Director, Progress Arizona</li>
       <li><strong>Eric Robbins*</strong>, Chair, Pima County Democratic Party</li>
       <li><strong>Ben Armentrout*</strong>, Youth Representative, ADP Progressive Council; PC, LD 20</li>
+      <li><strong>Charlene Fernandez</strong>, Chair, Arizona Democratic Party</li>
       <li><strong>Shawnté Rothschild</strong>, Vice Chair, Arizona Democratic Party</li>
       <li><strong>Nicolas Mink</strong>, Vice Chair, Arizona Democratic Party</li>
       <li><strong>Paul Stapleton-Smith</strong>, 2nd Vice Chair & SCM, LD 21</li>
