--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
   <nav>
     <a href="#home" class="nav-link">Home</a>
     <a href="#peoplesprimary" class="nav-link">The People's Primary</a>
-    <a href="#ppendorsements" class="nav-link">Endorsements</a>
+<!--    <a href="#ppendorsements" class="nav-link">Endorsements</a>  -->
     <a href="#why" class="nav-link">Why This Matters</a>
     <a href="#resolution" class="nav-link">The Resolution</a>
     <!--<a href="#resolutionendorsements" class="nav-link">Resolution Endorsements</a>-->
@@ -410,217 +410,6 @@
 
   </section>
   
-  <section id="ppendorsements" class="py-16 bg-gray-100">
-  <div class="max-w-4xl mx-auto px-4">
-    <h2 class="text-3xl font-bold text-gray-800 mb-8 text-center">Endorsements of the People's Primary</h2>
-    <a href="#pp-national-endorsements" class="nav-link"><i>See National Leaders</i></a>
-    <br>
-    <p>Want to add your name as an endorser? Go to <a href="https://docs.google.com/forms/d/e/1FAIpQLSe61f0KtM_TofiuI0g4ZCCAJ-XMmzHk2bn_WYfgMJ9K6cWCWg/viewform?usp=dialog">this form</a> to sign in support.</p>
-    <p>Endorsers of the Resolution passed on June 7th, 2025, can be found <a href="#resolutionendorsements">here.</a></p>
-    <p>Helpful vocabulary: ADP = Arizona Democratic Party,  LD = Legislative District, SCM = (ADP) State Committee Member, PC = Precinct Committeeperson</p>
-    <p>Asterisks designate members of the ADP People's Primary Ad Hoc Committee responsible for preparing the People's Primary policy.</p>
-    <!-- Arizona Leaders -->
-    <h3 class="text-2xl font-semibold text-gray-700 mb-4">Arizona Leaders</h3>
-    <ul id="pp-arizona-endorsements" class="space-y-2">
-      <li><strong>Kai Newkirk*</strong>, Co-Chair, ADP Progressive Council; Founding Mission Director, Democracy Spring</li>
-      <li><strong>Emily Kirkland*</strong>, PC, LD 8; Former Executive Director, Progress Arizona</li>
-      <li><strong>Eric Robbins*</strong>, Chair, Pima County Democratic Party</li>
-      <li><strong>Ben Armentrout*</strong>, Youth Representative, ADP Progressive Council; PC, LD 20</li>
-      <li><strong>Charlene Fernandez</strong>, Chair, Arizona Democratic Party</li>
-      <li><strong>Shawnté Rothschild</strong>, Vice Chair, Arizona Democratic Party</li>
-      <li><strong>Nicolas Mink</strong>, Vice Chair, Arizona Democratic Party</li>
-      <li><strong>Paul Stapleton-Smith</strong>, 2nd Vice Chair & SCM, LD 21</li>
-      <li><strong>Eva Putzova</strong>, Former Flagstaff City Councilmember; SCM, LD 6</li>
-      <li><strong>Leezah Sun</strong>, Chair & SCM, LD 22 Democratic Party</li>
-      <li><strong>Pedro Caudillo Paredes</strong>, Chair & SCM, LD 24 Democratic Party</li>
-      <li><strong>Dan O’Neal</strong>, SCM, LD 14; State Coordinator, Progressive Democrats of Arizona; Chair Emeritus, ADP Progressive Council</li>
-      <li><strong>Brianna Westbrook</strong>, Former Vice Chair, Arizona Democratic Party; Former National Bernie Sanders Surrogate</li>
-      <li><strong>Timothy Kosse</strong>, First Vice Chair, Pima County Democratic Party; SCM, LD 17</li>
-      <li><strong>Nick Collins</strong>, Secretary, ADP Progressive Council; SCM, LD 12</li>
-      <li><strong>Angela Buer</strong>, Former Chair, LD 9 Democratic Party</li>
-      <li><strong>Dhruv Rebba</strong>, Co-Chair, ADP AAPI Caucus; Vice President, ASU Young Dems</li>
-      <li><strong>Markus Ceniceros</strong>, Vice President, Littleton Elementary School District; 3rd Vice Chair, Maricopa County Democratic Party</li>
-      <li><strong>Rahel Hehn</strong>, President, University of Arizona College Democrats; PC, LD 17</li>
-      <li><strong>Rasean Clayton</strong>, Equity Moderator, ADP</li>
-      <li><strong>Bobby Bauders</strong>, Former School Board Member</li>
-      <li><strong>Julia Walsh</strong>, Secretary, ADP Jewish Caucus; SCM, LD 12</li>
-      <li><strong>Donna Durand</strong>, Former Chair & SCM, LD 25</li>
-      <li><strong>Channel Powe</strong>, SCM, LD 8; ADP Chair Candidate</li>
-      <li><strong>Shasta Guthrie</strong>, 2nd Vice Chair, Yavapai County Democratic Party; SCM, LD 1</li>
-      <li><strong>Chester Bokich</strong>, 1st Vice Chair & SCM, LD 11</li>
-      <li><strong>Rivko Knox</strong>, SCM, LD 2</li>
-      <li><strong>Ken Kenegos</strong>, SCM, LD 18</li>
-      <li><strong>Kathy Fitzmaurice Yontz</strong>, SCM, LD 12</li>
-      <li><strong>James Jursich</strong>, SCM, LD 12</li>
-      <li><strong>Marilyn Weissman</strong>, SCM, LD 6</li>
-      <li><strong>Eve Shapiro</strong>, SCM, LD 18</li>
-      <li><strong>Deydrek Scott</strong>, SCM, LD 6</li>
-      <li><strong>Debra Block</strong>, SCM, LD 6</li>
-      <li><strong>Michael Bradley</strong>, SCM, LD 4</li>
-      <li><strong>Don Womack</strong>, SCM, LD 18</li>
-      <li><strong>Dr Amtul R Ahmad</strong>, SCM, LD 23</li>
-      <li><strong>Yazdaan Ayham Taajwar</strong>, SCM, LD 12;</li>
-      <li><strong>Melissa Galarza</strong>, SCM, LD 12</li>
-      <li><strong>Sharon Regen</strong>, SCM, LD 1</li>
-      <li><strong>Vivian Perry</strong>, SCM, LD 2</li>
-      <li><strong>Janet Kerby</strong>, SCM, LD 12</li>
-      <li><strong>Shara Carrillo</strong>, SCM, LD 14</li>
-      <li><strong>Dawn Schackner</strong>, SCM, LD 6</li>
-      <li><strong>Geoffry Fitzwater-Castle</strong>, SCM, LD 7; 2nd Vice-Chair, Apache Junction Democrats; Voter Registration Chair, Pinal County Democratic Party</li>
-      <li><strong>Donna Durand</strong>, Former Chair & SCM, LD 25</li>
-      <li><strong>Mary S. Addy</strong>, SCM, LD 23</li>
-      <li><strong>Ruthee Goldkorn</strong>, SCM, LD 28</li>
-      <li><strong>Angela Quiroz</strong>, PC, LD 14 </li>
-      <li><strong>Jessica Staggers</strong>, PC, LD 29 </li>
-      <li><strong>Samantha Severson</strong>, Democratic Voter & Congressional Candidate, AZ 06</li>
-      <li><strong>Peyton Bradley</strong>, Secretary, Arizona College Democrats</li>
-      <li><strong>Gary Michiel Montiel</strong>, Precint Committee Chair, Superior, AZ; PC, LD 7</li>
-      <li><strong>Syed Mahmud Nasir Raza</strong>, Democratic Voter & Member, LD 4</li>
-      <li><strong>Maher Arekat</strong>, Founder and Director, Palestine Community Center of Arizona</li>
-      <li><strong>Ted Solis</strong>, Democratic Voter, Tempe</li>
-      <li><strong>James A Kimes</strong>, Proud Liberal</li>
-      <li><strong>Edwin Fix</strong>, Citizen</li>
-      <li><strong>Eric Paschal</strong>, Democratic Voter, Phoenix</li>
-      <li><strong>Adam David Burch</strong>, Voter, Phoenix</li>
-      <li><strong>Rebecca Lynn Crawford</strong>, Independent</li>
-      <li><strong>Kathryn Connor</strong>, Democratic Voter, LD 24</li>
-      <li><strong>Stephen Mufarreh</strong></li>
-      <li><strong>Alex Mixa</strong>, Concerned American</li>
-      <li><strong>Jackson Davis</strong>, Democratic Voter</li>
-      <li><strong>Jessica van Oostrom</strong>, Voter, Phoenix</li>
-      <li><strong>Diane Escalante</strong>, Democratic Voter, Tempe</li>
-      <li><strong>Jason Todd</strong>, Progressive Voter, Arizona</li>
-      <li><strong>Judith H. Coburn</strong>, Democratic Voter, Mesa</li>
-      <li><strong>Joshua Howard</strong>, Arizona Voter</li>
-      <li><strong>Leeann McIntosh</strong>, Democratic Voter</li>
-
-      
-      <!--
-      <li><strong>Missa Foy</strong>, Co-Chair, ADP Progressive Council; Chair, Navajo County Democratic Party</li>
-      <li><strong>Jennifer Hilsbos</strong>, Chair, Pinal County Democratic Party</li>
-      <li><strong>Sen. Priya Sundareshan</strong>, Senate Democratic Leader, LD 18</li>
-      <li><strong>Sen. Catherine Miranda</strong>, Senate Democratic Assistant Leader, LD 11</li>
-      <li><strong>Sen. Analise Ortiz</strong>, State Senator, LD 24</li>
-      <li><strong>Sen. Lauren Kuby</strong>, State Senator, LD 8</li>
-      <li><strong>Rep. Mariana Sandoval</strong>, State Representative, LD 13</li>
-      <li><strong>Rep. Brian Garcia</strong>, State Representative, LD 8</li>
-      <li><strong>Raquel Terán</strong>, Former Chair, Arizona Democratic Party; Former Senate Democratic Leader</li>
-      <li><strong>Markus Ceniceros</strong>, Board Member, Littleton Elementary School District; SCM, LD 22; 3rd Vice Chair, Maricopa County Democratic Party</li>
-      <li><strong>Shawnte Rothschild</strong>, Vice Chair, Arizona Democratic Party</li>
-      <li><strong>Sarah Stuart</strong>, President, Arizona College Democrats; Coconino County Democratic Party, Youth Committee Chair; PC, LD 7</li>
-      <li><strong>Laura Carter</strong>, Chair, Coconino County Democratic Party</li>
-      <li><strong>Martín J. Quezada</strong>, Former State Senator, LD 29</li>
-      <li><strong>Richard Andrade</strong>, Former State Representative, LD 29</li>
-      <li><strong>Celia Barotz</strong>, Former Vice Mayor of Flagstaff; SCM, LD 6</li>
-      <li><strong>Jackson Reed</strong>, ADP Executive Committee Member; SCM, LD 8</li>
-      <li><strong>Connie Cockrell</strong>, Chair, Gila County Democrats</li>
-      <li><strong>Alison Porter</strong>, Co-Chair, ADP Small Business Council; Co-Founder, Save Our Schools</li>
-      <li><strong>Jess Staggers</strong>, Membership Director, Maricopa County Young Democrats; SCM, LD 29</li>
-      <li><strong>Joan B. McDermott</strong>, Chair, MCDCC District 3</li>
-      <li><strong>Jeffrey Tucker</strong>, SCM, LD 13; At-Large Board Member</li>
-      <li><strong>Alex Kack</strong>, Executive Director, Pima County Democratic Party</li>
-      <li><strong>Ashton Dolce</strong>, AZ State Chair, High School Democrats of America</li>
-      <li><strong>Alex Alvarez</strong>, SCM, LD 12</li>
-      <li><strong>Hunter Holt</strong>, 2nd Vice Chair, Pima County Democratic Party; President, Marana Unified School Board, State Senate Candidate, LD 17</li>
-      <li><strong>Salil Deshpande</strong>, SCM, LD 18</li>
-      <li><strong>Susie Thornton</strong>, Secretary & SCM, LD 12</li>
-      <li><strong>Alex Ray Sanchez</strong>, Communications Chair, Pima County Democratic Party; Southern Arizona Vice Chair, ADP Progressive Council</li>
-      <li><strong>Ann Heitland</strong>, Former Senior Vice-Chair, ADP; Former Chair, Coconino County Democratic Party</li>
-      <li><strong>Natacha Chavez</strong>, Vice Chair, ADP Progressive Council, SCM, LD 22</li>
-      <li><strong>Thomas Dunning</strong>, 1st Vice President, Democrats of Rim Country</li>
-      <li><strong>Betts Putnam-Hidalgo</strong>, SCM, LD 20; Former Co-Chair, ADP Progressive Council</li>
-      <li><strong>Athena Shao</strong>, Director of Political Affairs, AZ College Democrats</li>
-      <li><strong>Suzi Walling</strong>, SCM & Former Chair, LD 29; Former President, Grand Democrats</li>
-      <li><strong>Marilyn Weissman</strong>, PC, LD 6</li>
-      <li><strong>Donna Hanley</strong>, SCM, LD 7</li>
-      <li><strong>Charlie Silver</strong>, SCM, LD 6</li>
-      <li><strong>Ken Kenegos</strong>, SCM, LD 18</li>
-      <li><strong>Cathy Ransom</strong>, SCM, LD 1</li>
-      <li><strong>Mike Fogel</strong>, SCM & Former Clean Election Senate Candidate ('22 & '24), LD 1</li>
-      <li><strong>Kathy Fitzmaurice Yontz</strong>, SCM, LD 12</li>
-      <li><strong>Peter Cerchiara</strong>, 2nd VC Community Engagement, LD 3</li>
-      <li><strong>Jessica Chalberg</strong>, PC, LD 21</li>
-      <li><strong>Roemello Chavez</strong>, PC, LD 8</li>
-      <li><strong>Michael David Bryan</strong>, SCM; VP, Democrats of Greater Tucson</li>
-      <li><strong>Kevin Glover</strong>, SCM, LD 3</li>
-      <li><strong>Mikah Dyer</strong>, PC, LD 28</li>
-      <li><strong>Connor Roland</strong>, Northern Development VP, Young Democrats of AZ; PC, LD 13</li>
-      <li><strong>Issac Young Jr.</strong>, Political Director, Young Democrats of AZ; PC, LD 3</li>
-      <li><strong>Kaycee Campbell</strong>, Vice President, Maricopa County Young Democrats</li>
-      <li><strong>Cooper Long</strong>, Chief of Staff, University of Arizona College Democrats</li>
-      <li><strong>Joey Hauger</strong>, Finance Director, Arizona College Democrats</li>
-      <li><strong>Eric Stafford</strong>, Vice Chair, LD 29</li>
-      <li><strong>Sharon Regen</strong>, SCM, LD 1</li>
-      <li><strong>Sherri Johnson</strong>, SCM, LD 12</li>
-      <li><strong>Nancy Scharff</strong>, SCM, LD 1</li>
-      <li><strong>Karen Dubin</strong>, SCM</li>
-      <li><strong>Ruthee Goldkorn</strong>, SCM, LD 28</li>
-      <li><strong>Marshall Militano</strong>, 2nd Vice Chair, LD 27</li>
-      <li><strong>George McGaughey</strong>, Chair & SCM, LD 19</li>
-      <li><strong>Leigh Emrick</strong>, PC</li>
-      <li><strong>Bernard Buddy Fleitz</strong>, SCM, LD 1</li>
-      <li><strong>James Perry Durand</strong>, 1st Vice Chair, LD 25</li>
-      <li><strong>William Olear</strong>, Chair, LD 25</li>
-      <li><strong>Marlene Bluestein</strong>, SCM, LD 18</li>
-      <li><strong>Susan Heck, M.S., FNP</strong>, PC, LD 17</li>
-      <li><strong>Stephen Harshman</strong>, Chair, The Apache Junction Democrats</li>
-      <li><strong>Lin Ogburn</strong>, SCM, LD 5</li>
-      <li><strong>Sean Feeney</strong>, PC, LD 22</li>
-      <li><strong>Timothy Kosse</strong>, First Vice Chair, Pima County Democratic Party; SCM</li>
-      <li><strong>Debra Block</strong>, SCM, LD 6</li>
-      <li><strong>Catherine Ralls</strong>, PC, LD 12</li>
-      <li><strong>Katherine Ginzel</strong>, SCM, LD 1</li>
-      <li><strong>Rebecca Villalpando</strong>, SCM, LD 1</li>
-      <li><strong>Aaron Essif</strong>, SCM, LD 17</li>
-      <li><strong>Ricky Spann</strong>, SCM</li>
-      <li><strong>Melissa Westbrook</strong>, SCM, LD 12</li>
-      <li><strong>Victoria Watson</strong>, Secretary, University of Arizona College Democrats</li>
-      <li><strong>Joshua Evans</strong>, PC</li>
-      <li><strong>David Gámez</strong>, PC & Treasurer, LD 21; Southern AZ Regional Director, AZ College Dems</li>
-      <li><strong>Marilyn Weissman</strong>, SCM, LD 6</li>
-      <li><strong>Mike Nickerson</strong>, SCM, LD 17</li>
-      <li><strong>Chris Donat</strong>, Candidate for Congress, AZ 06; PC, LD 17</li>
-      <li><strong>Gary Michiel Montiel</strong>, PC Chair</li>
-      <li><strong>Nikkie Iglar</strong>, Communications Director, Pima County Young Democrats</li>
-      <li><strong>Julie Tang</strong>, PC, LD 8 (Rolling Hills Precinct)</li>
-      <li><strong>Lila Dessen</strong>, University of Arizona College Democrat</li>
-      <li><strong>Dylan Williams</strong>, Democratic Voter, Mesa</li>
-      <li><strong>Jacob Carlson</strong>, Democrat Voter, Snowflake</li>
-      <li><strong>Lynn Cannon</strong>, Democratic Voter</li>
-      <li><strong>Jacob Gross</strong>, Democratic Voter, Phoenix</li>
-      <li><strong>Amy Axelrod</strong>, Democratic Voter, LD 8</li>
-      <li><strong>Kiel Revenew</strong>, Democratic Voter, LD 8</li>
-      <li><strong>Jacob Petray</strong>, Democratic Voter, Phoenix</li>
-      <li><strong>Margie Gomez</strong>, Democratic Voter</li>
-      <li><strong>Anna Makin</strong>, Democratic Voter, LD 10</li>
-      <li><strong>Ellie Yar</strong>, Democratic Voter, Mesa</li>
-      <li><strong>Eric Paschal</strong>, Democratic Voter, Phoenix LD 5</li>
-      <li><strong>Christopher Oakley</strong>, Democratic Voter, LD 8</li>
-      <li><strong>Rutger Hartmann Olden</strong>, Democratic Voter, Tucson</li>
-      <li><strong>Paola Campos Martinez</strong>, Democratic Voter</li>
-      <li><strong>Tyler Thalmann</strong>, Voter, Phoenix</li>
-      <li><strong>Henley Knex Gilles</strong>, Democratic Voter, Tucson</li>
-      <li><strong>Arizona College Democrats</strong></li>
-      <li><strong>University of Arizona College Democrats</strong></li> -->
-    </ul>
-    <!-- National Leaders -->
-    <h3 class="text-2xl font-semibold text-gray-700 mt-10 mb-4">National Leaders</h3>
-    <ul id="pp-national-endorsements" class="space-y-2">
-      <li><strong>Sen. Bernie Sanders</strong>, US Senator, Vermont</li>
-      <li><strong>Rep. Ro Khanna</strong>, US Congressman, CA-17</li>
-      <li><strong>Larry Cohen</strong>, Past President, Communication Workers of America; Board Chair, Our Revolution; DNC Member</li>
-      <!--
-      <li><strong>Lawrence Lessig</strong>, Chair, Equal Citizens</li>
-      <li><strong>Bill de Blasio</strong>, Former Mayor of New York City</li>
-      <li><strong>Christine Pelosi</strong>, DNC Executive Committee Member</li>
-      <li><strong>Nomiki Konst</strong>, DNC Reform Commission Member <a href="https://x.com/NomikiKonst/status/1930723603127120311"><i>(Statement of support)</i></a></li>
-      <li><strong>Alan Minsky</strong>, Executive Director, Progressive Democrats of America</li>
-      <li><strong>Progressive Democrats of America</strong></li>
-      <li><strong>Our Revolution</strong></li>
-      -->
-    </ul>
-  </div>
-  </section>
   
   <section id="why">
       <h2>Why This Matters</h2>
@@ -839,9 +628,10 @@
 
 </main>
 
-<a class="floating-button" href="https://docs.google.com/forms/d/e/1FAIpQLSe61f0KtM_TofiuI0g4ZCCAJ-XMmzHk2bn_WYfgMJ9K6cWCWg/viewform?usp=dialog" target="_blank">
+<!-- <a class="floating-button" href="https://docs.google.com/forms/d/e/1FAIpQLSe61f0KtM_TofiuI0g4ZCCAJ-XMmzHk2bn_WYfgMJ9K6cWCWg/viewform?usp=dialog" target="_blank">
         Endorse the People's Primary &#128279;
 </a>
+-->
 
 <script>
   document.addEventListener("DOMContentLoaded", function () {
