Enhance 'The People's Primary' link with call to action
Updated the heading for 'The People's Primary' link to include a call to action and added target and rel attributes for improved accessibility.

--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
       </p>
     </section>
     <section id="peoplesprimary">
-    <h2><a href="https://docs.google.com/document/d/1MnRXeBDb4nj_hjQdhfwl9HuivDmXSaAAl3jqao4LZPg">The People's Primary</a></h2>
+    <h2>CLICK HERE: <a href="https://docs.google.com/document/d/1MnRXeBDb4nj_hjQdhfwl9HuivDmXSaAAl3jqao4LZPg" target="_blank" rel="noopener noreferrer">The People's Primary</a></h2>
     <!--
     <i>The People’s Primary policy is being presented for a vote at the January 24th, 2026, State Committee Meeting as a party policy rather than a bylaws change. Like the Code of Conduct policy adopted by the Executive Board and the Conflict of Interest policy adopted by the executive committee, this policy would not be encoded as bylaws. As a pilot program proposed for the 2026 election cycle, this policy is not now appropriate to be enshrined as permanent bylaws. Given the consequential character of this policy and in keeping with the direction of the June 7th resolution, this policy is proposed to be enacted by a vote of the full state committee, the highest governing body of the party, rather than the executive board or executive committee. Further, we assess that no bylaws changes are necessary to enact or enforce this policy.</i>
     <h3>PEOPLE'S PRIMARY POLICY</h3>
