Restore 'The Resolution' link
Restored the 'The Resolution' link in the navigation and removed commented-out section for the resolution.

--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
     <a href="#peoplesprimary" class="nav-link">The People's Primary</a>
     <a href="#ppendorsements" class="nav-link">Endorsements</a>
     <a href="#why" class="nav-link">Why This Matters</a>
-<!--     <a href="#resolution" class="nav-link">The Resolution</a>  -->
+    <a href="#resolution" class="nav-link">The Resolution</a>
     <!--<a href="#resolutionendorsements" class="nav-link">Resolution Endorsements</a>-->
     <a href="#about-us" class="nav-link">About Us</a>
   </nav>
@@ -399,7 +399,6 @@
       </div>
   </section>
 
-<!--
   <section id="resolution">
     <h2>The Resolution</h2>
     <p><strong>Resolution passed by the Arizona State Democratic Party on June 7th, 2025</strong></p>
@@ -412,7 +411,6 @@
     <p><strong>NOW, THEREFORE, BE IT RESOLVED</strong> that the Arizona Democratic Party will establish a "People's Primary" policy to bar, to the greatest extent possible, the use of massive private wealth to buy or unduly influence our primary elections. This policy will ensure, to the greatest extent possible, that candidates in Democratic primaries are not benefited by, dependent on, or elected due to outside or independent electioneering spending funded by big donors who are circumventing legal limits on direct contributions to a candidate’s campaign fund to spend tens or hundreds of thousands and even millions of dollars of private wealth to elect the candidates of their choice.</p>
     <p><strong>BE IT FURTHER RESOLVED</strong> that the Chair of the ADP Rules Committee shall form an ad-hoc committee to develop this policy that includes the organizers of this resolution and one mutually-agreed member of the ADP Executive Committee. The committee will be charged with developing this policy to achieve the purpose established here-in and with formulating official proposed ADP People's Primary policy and procedures, including any bylaws changes, if necessary, to implement and enforce it. This policy and associated procedures, and any additional supporting resolution or bylaws changes, will be prepared and submitted for a vote at the September 2025 State Committee Meeting.</p>
   </section>
--->
 
 <section id="about-us">
   <h2>About Us</h2>
