Update committee member details in index.html

--- a/index.html
+++ b/index.html
@@ -253,7 +253,8 @@
         <li><strong>Eric Robbins</strong>, Chair, Pima County Democratic Party</li>
         <li><strong>Raquel Teran</strong>, Former Chair, Arizona Democratic Party; Past Senate Democratic Leader</li>
         <li><strong>Terry Goddard</strong>, Former Arizona Attorney General & Phoenix Mayor</li>
-        <li><strong>Sen. Catherine Miranda</strong>, LD 27; Senate Democratic Assistant Leader</li>
+        <li><strong>Sen. Catherine Miranda</strong>, LD 11; Senate Democratic Assistant Leader</li>
+        <li><strong>Martín Quezada</strong>, SCM, LD22; former State Senator</li>
         <li><strong>Markus Ceniceros</strong>, Vice President, Littleton Elementary School District</li>
         <li><strong>Missa Foy</strong>, Co-Chair, Progressive Council; Chair, Navajo County Democratic Party</li>
         <li><strong>Nick Collins</strong>, Secretary, Progressive Council</li>
@@ -272,8 +273,9 @@
         <li><strong>Kristie O'Brien</strong>, Candidate, State Legislature LD 13</li>
         <li><strong>Cicely Rocha-Miller</strong>, Candidate for Chandler City Council</li>
         <li><strong>Maher Arekat</strong>, Founder and Director, Palestine Community Center of Arizona</li>
+        <li><strong>Cathy Ransom</strong>, State Committee Member</li>
         <li><strong>Angela Buer</strong>, Former Chair, LD 9 Democratic Party</li>
-        <li><strong>Annarose Lilly</strong>, State Committee Member, Chair, LD 28</li>
+        <li><strong>Annarose Lilly</strong>, State Committee Member, LD 28 Chair</li>
         <li><strong>James Jursich</strong>, State Committee Member</li>
         <li><strong>Ken Kenegos</strong>, State Committee Member</li>
         <li><strong>Sharon Regen</strong>, State Committee Member</li>
@@ -294,7 +296,6 @@
         <li><strong>Kathleen Fitzmaurice-Yontz</strong>, State Committee Member</li>
         <li><strong>Stephen Harshman</strong>, State Committee Member</li>
         <li><strong>Travis Nass</strong>, State Committee Member</li>
-        <li><strong>Cathy Ransom</strong>, State Committee Member</li>
         <li><strong>George McGaughey</strong>, State Committee Member</li>
         <li><strong>Susan Ordway</strong>, State Committee Member</li>
         <li><strong>Sarah Stuart</strong>, State Committee Member</li>
@@ -345,8 +346,10 @@
         <li><strong>Chris Fleischman</strong>, State Committee Member</li>
         <li><strong>Katherine Ginzel</strong>, State Committee Member</li>
         <li><strong>Toby Friedman</strong>, State Committee Member</li>
+        <li><strong>Charlie Silver</strong>, State Committee Member</li>
         <li><strong>Dianne Post</strong>, Attorney</li>
         <li><strong>Syed Mahmud Nasir Raza</strong>, Democratic Voter & Member, LD 4</li>
+        <li><strong>Nancy Meister</strong>, State Committee Member</li>
     </ul>
     <!-- National Leaders -->
     <h3 class="text-2xl font-semibold text-gray-700 mt-10 mb-4">National Leaders</h3>
