Add Paul Singh as a candidate for US Congress CD 4

--- a/index.html
+++ b/index.html
@@ -267,6 +267,7 @@
         <li><strong>Dan O'Neal</strong>, Chair Emeritus, Progressive Council</li>
         <li><strong>Dhruv Rebba</strong>, Co-Chair, ADP AAPI Caucus; Vice President, ASU Young Dems</li>
         <li><strong>Bobby Nichols</strong>, Candidate for Tempe City Council</li>
+        <li><strong>Paul Singh</strong>, Candidate, US Congress CD 4</li>
         <li><strong>Elizabeth Lee</strong>, Candidate, US Congress CD 5</li>
         <li><strong>Blake Bracht</strong>, Candidate, US Congress CD 5</li>
         <li><strong>Keith Lara</strong>, Candidate for US Congress CD 9</li>
